# mCRL2

tools/experimental/: CMakeLists.txt
tools/experimental/ltscompare2mcf/: CMakeLists.txt  cleaveland.h  distinguisher.h  ltscompare2mcf.cpp
